Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,8 +14,8 @@ agent:
       env_vars:
 				ZOOKEEPER_CLIENT_PORT: "2181"
 				ZOOKEEPER_TICK_TIME: "2000"
-    - name: kafka
-      image: 'confluentinc/cp-kafka:latest'
+		- name: kafka
+			image: "confluentinc/cp-kafka:latest"
       env_vars:
 	      KAFKA_BROKER_ID: "1"
    	    KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
